2015-05-27  Marko Myllynen  <myllynen@redhat.com>

	* stdlib/monetary.h: Fix comment.

2015-05-26  Chris Metcalf  <cmetcalf@ezchip.com>

	* sysdeps/unix/sysv/linux/tile/sysdep.h (INLINE_SYSCALL):
	Avoid using variables in #defines that might cause shadowing.
	(INTERNAL_VSYSCALL_CALL): Likewise.

2015-05-26  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/nacl/lll_timedlock_wait.c: New file.

	* nptl/lowlevellock.c (__lll_timedlock_wait): Moved ...
	* nptl/lll_timedlock_wait.c: ... to this new file.
	* nptl/Makefile (libpthread-routines): Add it.
	* nptl/lowlevellock.c (__lll_timedwait_tid): Moved ...
	* nptl/lll_timedwait_tid.c: ... to this new file.
	* nptl/Makefile (libpthread-routines): Add it.
	* sysdeps/sparc/sparc32/lll_timedlock_wait.c: New file.
	* sysdeps/sparc/sparc32/lll_timedwait_tid.c: New file.
	* sysdeps/unix/sysv/linux/i386/i486/lll_timedlock_wait.c: New file.
	* sysdeps/unix/sysv/linux/i386/i586/lll_timedlock_wait.c: New file.
	* sysdeps/unix/sysv/linux/i386/i686/lll_timedlock_wait.c: New file.
	* sysdeps/unix/sysv/linux/i386/i486/lll_timedwait_tid.c: New file.
	* sysdeps/unix/sysv/linux/i386/i586/lll_timedwait_tid.c: New file.
	* sysdeps/unix/sysv/linux/i386/i686/lll_timedwait_tid.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/lll_timedlock_wait.c: New file.
	* sysdeps/unix/sysv/linux/x86_64/lll_timedwait_tid.c: New file.

2015-05-26  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/aarch64/gettimeofday.c: Remove file.
	* sysdeps/unix/sysv/linux/s390/gettimeofday.c: Likewise.
	* sysdeps/unix/sysv/linux/tile/gettimeofday.c: Likewise.
	* sysdeps/unix/sysv/linux/aarch64/sysdep.h
	(HAVE_GETTIMEOFDAY_VSYSCALL): Define.
	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep.h
	(HAVE_GETTIMEOFDAY_VSYSCALL): Likewise.
	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep.h
	(HAVE_GETTIMEOFDAY_VSYSCALL): Likewise.
	* sysdeps/unix/sysv/linux/tile/sysdep.h
	(HAVE_GETTIMEOFDAY_VSYSCALL): Likewise.