@@ -1,3 +1,8 @@
+2015-05-28  Wilco Dijkstra  <wdijkstr@arm.com>
+
+	* sysdeps/ieee754/dbl-64/s_fabs.c: (__fabs): Call __builtin_fabs.
+	* sysdeps/ieee754/flt-32/s_fabsf.c: (__fabsf): Likewise.
+
 2015-05-27  Marko Myllynen  <myllynen@redhat.com>
 
 	* stdlib/monetary.h: Fix comment.
